--- a/public/index.html
+++ b/public/index.html
@@ -47,9 +47,12 @@
         </div>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha384-1H217gwSVyLSIfaLxHbE7dRb3v4mYCKbpQvzx0cegeju1MVsGrX5xXxAvs/HgeFs" crossorigin="anonymous"></script>
+
         <script>
             function goToLobby() {
-                let username = encodeURI($('$nameInput').val());
+                let username = encodeURI($('#nameInput').val());
                 window.location.href = "lobby.html?username=" + username;
             }
 
@@ -61,6 +64,8 @@
                 }
             });
         </script>
+
+        
     </body>
 
 </html>
